fix for max width

--- a/P2s/Tethers/css/style.css
+++ b/P2s/Tethers/css/style.css
@@ -10,6 +10,9 @@
 /******************************************
 /* LAYOUT
 /*******************************************/
+body{
+    max-width:1500px;
+}
 .main{
   display: flex;
 }
